Make RxS3StreamReaderTest compatible with Java 8